@@ -1,3 +1,8 @@
+Вер.1.10.1:
+- пофикшена ошибка с форматами чисел в поле ps
+- пофикшена инициализация значений в DataEngine
+- пофикшена проверка qmmp
+
 Вер.1.10.0:
 + добавлены теги $hddtotmb, $hddtotgb
 + добавлены теги $memtotmb, $memtotgb, $swaptotmb, $swaptotgb
